resolved alt image issue

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="img-section">
                 <!-- <img src="images/bg-pattern-desktop.svg"> -->
                 <img src="images/illustration-woman-online-desktop.svg" alt="illustration">
-                <img src="images/illustration-woman-online-mobile.svg">
+                <img src="images/illustration-woman-online-mobile.svg" alt="illustration-mobile">
                 <!-- <img src="images/illustration-box-desktop.svg"> -->
 
             </div>
