edited mobile code

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 
     <footer class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://www.github.com/gautamjuyal">Gautam Juyal</a>.
     </footer>
 </body>
 
